--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,10 @@
-html, body {
+html {
     height: 100%;
+    margin: 0%;
+    padding: 0%;
+}
+
+body {
     font-family: sans-serif;
     margin: 0%;
     padding: 0%;
@@ -136,14 +141,5 @@ label {
     background-color:rgb(70, 117, 203);
     color: white;
     font-weight: bold;
-}
-
-/* Session administrateur */
-
-.container_bo {
-    margin-top: 30px;
-    margin-left: 17%;
-    margin-right: 17%;
-    background-color: whitesmoke;
 }
 
