--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,16 +1,14 @@
 html {
     height: 100%;
-    margin: 0%;
-    padding: 0%;
-    position: relative;
 }
 
 body {
+    min-height: 100%;
+    position: relative;
     font-family: sans-serif;
     margin: 0%;
     padding: 0%;
     }
-
 
 .flux {
     margin-left: 15%;
@@ -77,6 +75,23 @@ ul {
     font-size: 10px;
     text-align: center;
 }
+
+/* Footer */
+
+footer {
+    position: absolute;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    bottom: 0;
+    left: 15%;
+    right: 15%;
+    text-align: center;
+    min-height: 40px;
+    color:rgb(58, 61, 63);
+    font-size: 10px;
+    border-top-style: groove;
+}
+
 
 /* Formulaire de connexion et new account */
 
