--- a/CSS/style.css
+++ b/CSS/style.css
@@ -40,7 +40,7 @@ header {
     justify-content: space-around;
     padding-top: 10px;}
 
-ul {
+nav > ul {
     list-style: none;
     color: white;}
 
@@ -83,6 +83,8 @@ h3 {
     justify-content: center;
     padding-top: 20px;
     max-height: 800px;
+    width: 100%;
+    overflow: auto;
 }
 
 .table_equipe {
@@ -92,6 +94,34 @@ h3 {
     height: 800px;
     text-align: center;
     overflow: auto;
+}
+
+.aside_left {
+    width: 25%;
+    background-color: whitesmoke;
+    font-size: smaller;
+    position: relative;
+    overflow: auto;
+}
+
+.button_team {
+    border: 0;
+    background:none;
+}
+
+.button_team:hover {
+    color: rgb(130, 68, 141);
+    font-weight: bold;
+}
+
+.aside_right {
+    width: 25%;
+    background-color: whitesmoke;
+    position: relative;
+}
+
+.teams_list {
+    height: 5px;
 }
 
 .display_td {
