--- a/CSS/style.css
+++ b/CSS/style.css
@@ -63,7 +63,7 @@ nav > ul {
     justify-content: center;
     width: 500px;
     height: 500px;
-    margin-top: -20px;
+    margin-top: -35px;
     background-color: white;
 }
 
@@ -77,6 +77,18 @@ nav > ul {
 
 h3 {
     color: rgb(73, 70, 67);
+}
+
+.link_about_sb {
+    font-size: 12px;
+    color: rgb(100, 84, 192);
+    font-style: italic;
+}
+
+.text_superbowl {
+    font-size: 12px;
+    color: rgb(109, 148, 191);
+
 }
 
 .container_matchs {
