--- a/CSS/style.css
+++ b/CSS/style.css
@@ -85,9 +85,18 @@ h3 {
     font-style: italic;
 }
 
+.container_about {
+    margin-top: 30px;
+    margin-left: 17%;
+    margin-right: 17%;
+    height: 70%;
+    background-color: whitesmoke;
+    overflow: auto;
+}
+
 .text_superbowl {
-    font-size: 12px;
-    color: rgb(109, 148, 191);
+    font-size: 13px;
+    color: rgb(49, 103, 161);
 
 }
 
