maj matchs live

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -278,6 +278,12 @@ footer {
     font-weight: bold;
 }
 
+.button_score_live {
+    background-color:rgb(234, 172, 80); 
+    font-size: 12px;
+    border-color: rgba(147, 150, 153, 0.858);
+}
+
 .button_score {
     background-color:rgb(184, 187, 179); 
     font-size: 12px;
