--- a/CSS/style.css
+++ b/CSS/style.css
@@ -340,4 +340,22 @@ h5 {
     height: 2px;
 }
 
+/* media query */
+
+@media screen and (max-width: 960px) {
+    nav > ul {font-size: small;}
+}
+
+@media screen and (max-width: 900px) {
+    .flux {
+        margin-left: 0%;
+        margin-right: 0%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    nav > ul {font-size: 11px;}
+}
+
+
 
