--- a/CSS/style.css
+++ b/CSS/style.css
@@ -288,6 +288,7 @@ footer {
 .button_score {
     background-color:rgb(184, 187, 179); 
     font-size: 12px;
+    min-height: 12px;
     border-color: rgba(147, 150, 153, 0.858);
 }
 
