--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,10 +15,6 @@ body {
     margin-right: 15%;
 }
 
-.nav_index {
-    margin-right: 100px;
-}
-
 header {
     background: linear-gradient(to bottom right, red, 25%, royalblue);
     height: 90px;
@@ -34,6 +30,7 @@ header {
 .menu {
     display: flex;
     justify-content: space-around;
+    margin-right: 100px;
     }
     
 .link_pages {
@@ -56,7 +53,6 @@ nav > ul {
 .container_matchs_index {
     display: flex;
     justify-content: center;
-    padding-top: 20px;
     max-height: 700px;
     width: 100%;
     background-image: url(../Images/SB-matchups.png);
@@ -70,7 +66,6 @@ nav > ul {
     justify-content: center;
     width: 500px;
     height: 500px;
-    margin-top: -35px;
     background-color: white;
 }
 
@@ -84,8 +79,13 @@ nav > ul {
     z-index: 1;
 }
 
-h3 {
+.teaser {
     color: rgb(73, 70, 67);
+    font-weight: bold;
+    font-size: 20px;
+    font-style: italic;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .link_about_sb {
@@ -137,6 +137,12 @@ h3 {
     overflow: auto;
     position: relative;
     z-index: 1;
+}
+
+.button-modal {
+    border: none;
+    background-color: white;
+    text-decoration: underline;
 }
 
 .aside_left {
