--- a/CSS/style.css
+++ b/CSS/style.css
@@ -89,8 +89,10 @@ nav > ul {
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 70%;
-    overflow: auto;
+    height: 75%;
+    overflow-y: auto;
+    position: relative;
+    z-index: 0;
 
 }
 
@@ -152,9 +154,12 @@ nav > ul {
 
 .aside_left {
     width: 25%;
-    height: 100%;
+    height: 1200px;
     background-color: whitesmoke;
     font-size: smaller;
+    overflow-y: auto;
+    position: relative;
+    z-index: 1;
 }
 
 .link_list_about_sb {
@@ -185,8 +190,11 @@ nav > ul {
 
 .aside_right {
     width: 25%;
-    height: 100%;
+    height: 1200px;
     background-color: whitesmoke;
+    overflow-y: auto;
+    position: relative;
+    z-index: 1;
 
 }
 
