--- a/CSS/style.css
+++ b/CSS/style.css
@@ -228,19 +228,19 @@ nav > ul {
     text-align: center;
     font-size: smaller;
     background-color: rgba(72, 118, 208, 0.856);
-    height: 130px;
+    height: 115px;
     padding-top: 20px;
     margin-left: 17%;
     margin-right: 17%;
     color: white;
     font-weight: 500;
     border-radius: 2px;
+    box-shadow: 4px 4px 4px grey;
+    border-radius: 2px;
 }
 
 .aside_right_videos {
-    margin: 20px;
-    padding-top: 10px;
-    padding-bottom: 30px;
+    margin: 30px;
     border-top: solid;
     border-color: rgb(170, 165, 164);
 }
@@ -381,12 +381,13 @@ footer {
 .title_form_pad10 {
     font-size: 17px;
     text-align: center;
-    background-color: rgb(73, 102, 206);
+    background-color: rgba(72, 118, 208, 0.856);
     color: white;
     padding-top: 10px;
     padding-bottom: 10px;
-    margin-right: 250px;
-    margin-left: 250px;
+    margin-right: 240px;
+    margin-left: 240px;
+    box-shadow: 4px 4px 4px rgb(196, 194, 194);
 }
 
 .subtitle {
