--- a/CSS/style.css
+++ b/CSS/style.css
@@ -101,7 +101,7 @@ nav > ul {
     display: flex;
     justify-content: center;
     width: 50%;
-    max-height: 700px;
+    height: 750px;
     background-color: white;
 
 }
