--- a/CSS/style.css
+++ b/CSS/style.css
@@ -578,6 +578,7 @@ h5 {
 
 }
 
+
 @media screen and (max-width: 360px) {
     footer {display: none;}
 
@@ -605,19 +606,19 @@ h5 {
 
 }
 
-@media screen and (max-height: 600px) {
+
+@media screen and (max-height: 700px) {
     footer {display: none;}
 }
-
 
 @media screen and (min-height: 900px) {
 
     .container_matchs_index {
-        height: 1000px;
+        min-height: 900px;
     }
     
     .table_equipe_index {
-        height: 1000px;
+        min-height: 900px;
     }
 
     .container_matchs {
