--- a/CSS/style.css
+++ b/CSS/style.css
@@ -279,7 +279,7 @@ nav > ul {
 
 /* MODAL commentaires matchs */
 
-.modal_margin {
+/* .modal_margin {
     margin-top: 5px;
 }
 
@@ -335,12 +335,36 @@ nav > ul {
     right: 145px;
     color: grey;
     text-decoration: none;
+} */
+
+.comment {
+    margin-top: 5px;
+    margin-bottom: 20px;
 }
 
 .link_comment {
     font-size: 11px;
     color: rgb(58, 61, 63);
     font-style: italic;
+}
+
+.display-none {
+    display: none;
+}
+
+dialog {
+    height: fit-content;
+    width: fit-content;
+    position: relative;
+    overflow-y: auto;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 12px;
+    border-color: rgba(69, 98, 126, 0.83);
+    background-color: cornflowerblue;
+    color: white;
+    font-weight: bold;
+    margin-top: 8px;
 }
 
 /* FOOTER */
